--- a/BackEnd/chatting/src/main/resources/application.yml
+++ b/BackEnd/chatting/src/main/resources/application.yml
@@ -1,19 +1,7 @@
-
-
-spring:
-  ssl:
-    bundle:
-      jks:
-        server:
-          key:
-            alias: "ssafy"
-          keystore:
-            location: "classpath:keystore/ssafy.p12"
-            password: "123456"
-            type: "PKCS12"
 server:
   port: 8443
-  ssl:
-    bundle: "server"
-    enabled: true
-    enabled-protocols: TLSv1.3
+
+
+
+OPENVIDU_URL: https://i10c205.p.ssafy.io:443/
+OPENVIDU_SECRET: root
